package content

import "github.com/zhsyourai/teddy-backend/content/proto"

func validateSendEmailReq(req *proto.SendEmailReq) error {
	return nil
}

func validateSendInBoxReq(req *proto.SendInBoxReq) error {
	return nil
}

func validateSendNotifyReq(req *proto.SendNotifyReq) error {
	return nil
}

func validateSendSMSReq(req *proto.SendSMSReq) error {
	return nil
}

func validateGetInBoxReq(req *proto.GetInBoxReq) error {
	return nil
}

func validateGetNotifyReq(req *proto.GetNotifyReq) error {
	return nil
}
