package server

import "github.com/zhsyourai/teddy-backend/common/proto/message"

func validateSendEmailReq(req *message.SendEmailReq) error {
	return nil
}

func validateSendInBoxReq(req *message.SendInBoxReq) error {
	return nil
}

func validateSendNotifyReq(req *message.SendNotifyReq) error {
	return nil
}

func validateSendSMSReq(req *message.SendSMSReq) error {
	return nil
}

func validateGetInBoxReq(req *message.GetInBoxReq) error {
	return nil
}

func validateGetNotifyReq(req *message.GetNotifyReq) error {
	return nil
}
